<?xml version="1.0" encoding="utf-8"?>
<!--

    /**
    * Created by Pavneet Singh on 05/05/18.
    * Contact : dev.pavneet@gmail.com
    */
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_stamp_add"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />


</menu>
