<!--

    /**
    * Created by Pavneet Singh on 05/05/18.
    * Contact : dev.pavneet@gmail.com
    */
-->
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/swipe_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>

