<?xml version="1.0" encoding="utf-8"?>
<!--

    /**
    * Created by Pavneet Singh on 05/05/18.
    * Contact : dev.pavneet@gmail.com
    */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pavneetsingh.android.stampit.ui.posts.AdHostActivity">

    <FrameLayout
        android:layout_weight="1"
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />


</LinearLayout>
